--- a/view/post.jade
+++ b/view/post.jade
@@ -1,9 +1,12 @@
-//- .post
-//-   .title
-//-     a(href="#")
-//-       span span_contents
-//-     label curation
-//-     a(href="#") Time
-//-     div(style: "width: 450px; overflow: hidden;")
-//-       pre
-//-         #{ self.value }
+
+.post
+  .title
+    a(href="#")
+      span #{ self.value.author }
+    if self.value.content
+      label #{ self.value.content.type }
+    #{ self.value.timestamp }
+    a(href="#") Time
+    div(style: "width: 450px; overflow: hidden;")
+      pre
+        #{ self.value }
