--- a/view/post.jade
+++ b/view/post.jade
@@ -1,22 +1,23 @@
-.post
-  .title
-    h3 #{value.content.title}
-    p #{value.content.oneLiner}
+.post.panel.panel-default
+  .panel-heading
+    h2 #{data.value.content.title}
+  .panel-body
+    p.lead #{data.value.content.oneLiner}
 
     a(href="#")
-      span #{ value.author }
+      span #{ data.value.author }
     a(href="#")
-      span #{ value.credits }
+      span #{ data.value.credits }
     
-    if value.content
-      label #{ value.content.type || 'encrypted' }
+    if data.value.content
+      label #{ data.value.content.type || 'encrypted' }
     
-    a(href="#") #{ value.timestamp }
-  div(style: "width: 450px; overflow: hidden;")
-  
-    p.summary #{ value.content.summary }
+    a(href="#") #{ moment(data.value.timestamp).fromNow() }
+    div(style: "width: 450px; overflow: hidden;")
     
-    each tag in value.content.tags 
-      span.tag= tag
+      p.summary #{ data.value.content.summary }
       
-    //- p #{JSON.stringify(value.content)}
+      each tag in data.value.content.tags 
+        span.tag
+          a(href="#")= tag
+        
