--- a/view/post.jade
+++ b/view/post.jade
@@ -6,9 +6,9 @@
     p.lead #{data.value.content.oneLiner}
 
     a(href="/#u/#{ encodeURIComponent(data.value.author) }")
-      span #{ data.value.author }
+      span.name #{ data.value.author }
     a(href="/#u/#{ encodeURIComponent(data.value.credits) }")
-      span #{ data.value.credits }
+      span.name #{ data.value.credits }
     
     if data.value.content
       label #{ data.value.content.type || 'encrypted' }
